Fixes jumping level indicator bug

--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -37,6 +37,7 @@
   display: block;
   transform: scale(1);
   transition: transform 0.9s ease;
+  will-change: transform;
 
   @media (min-width: @tablet-width) {
     width: 285px;
